--- a/src/app/demo/components/department/department.component.html
+++ b/src/app/demo/components/department/department.component.html
@@ -1,166 +1,176 @@
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
-    <div class="addstubutt"><p-button (click)="showDialog()"
-      label="ADD Department"></p-button>
-    </div>
-    <form [formGroup]="userForm" >
-    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
-        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
-  
-        
-          <div class="formgrid grid">
-            <div class="field col">
-                <label class="text-2xl" for="firstname2">Department Code <span class="red"> *</span></label>
-                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="code">
-                <div class="error" *ngIf="userForm.get('code')?.touched && userForm.get('code')?.invalid">
-                  <div *ngIf="userForm.get('code')?.errors?.['required']">
-                    This field is required.
-                  </div>
-                  <div *ngIf="userForm.get('code')?.errors?.['minlength']">
-                    Minimum length is 2 characters.
-                  </div>
-                  <div *ngIf="userForm.get('code')?.errors?.['maxlength']">
-                    Maximum length is 2 characters.
-                  </div>
-                </div>
-              </div>
-              <div class="field col">
-                <label class="text-2xl" for="lastname2">Department Name<span class="red"> *</span></label>
-                <input id="lastname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="name">
-                <div class="error" *ngIf="userForm.get('name')?.touched && userForm.get('name')?.invalid">
-                  <div *ngIf="userForm.get('name')?.errors?.['required']">
-                    This field is required.
-                  </div>
-                  <div *ngIf="userForm.get('name')?.errors?.['minlength']">
-                    Minimum length is 2 characters.
-                  </div>
-                </div>
-              </div>
-          </div>
+  <div class="addstubutt"><p-button (click)="showDialog()" label="ADD Department"></p-button>
+  </div>
+  <form [formGroup]="userForm">
+    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
+      [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
 
-          <div class="formgrid grid">
-          <div class="field col">
-            <label class="text-2xl" for="firstname2">Demand Code<span class="red"> *</span></label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="demandCode">
-            <div class="error" *ngIf="userForm.get('demandCode')?.touched && userForm.get('demandCode')?.invalid">
-              <div *ngIf="userForm.get('demandCode')?.errors?.['required']">
-                This field is required.
-              </div>
-              <div *ngIf="userForm.get('demandCode')?.errors?.['minlength']">
-                Minimum length is 1 number.
-              </div>
-            </div>
-          </div>
-          <div class="field col">
-            <label class="text-2xl" for="firstname2">Address<span class="red"> *</span></label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="address">
-            <div class="error" *ngIf="userForm.get('address')?.touched && userForm.get('address')?.invalid">
-              <div *ngIf="userForm.get('address')?.errors?.['required']">
-                This field is required.
-              </div>
-            </div>
-          </div>
-          </div>
 
-          <div class="formgrid grid">
-          <div class="field col">
-            <label class="text-2xl" for="lastname2">Pin Code<span class="red"> *</span></label>
-            <input id="lastname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="pinCode">
-            <div class="error" *ngIf="userForm.get('pinCode')?.touched && userForm.get('pinCode')?.invalid">
-              <div *ngIf="userForm.get('pinCode')?.errors?.['required']">
-                This field is required.
-              </div>
-              <div *ngIf="userForm.get('pinCode')?.errors?.['minlength']">
-                Minimum length is 6 characters.
-              </div>
-              <div *ngIf="userForm.get('pinCode')?.errors?.['maxlength']">
-                Maximum length is 6 characters.
-              </div>
+      <div class="formgrid grid">
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">Department Code <span class="red"> *</span></label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="code">
+          <div class="error" *ngIf="userForm.get('code')?.touched && userForm.get('code')?.invalid">
+            <div *ngIf="userForm.get('code')?.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="userForm.get('code')?.errors?.['minlength']">
+              Minimum length is 2 characters.
+            </div>
+            <div *ngIf="userForm.get('code')?.errors?.['maxlength']">
+              Maximum length is 2 characters.
             </div>
           </div>
-          <div class="field col">
-            <label class="text-2xl" for="firstname2">Phone No.<span class="red"> *</span></label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="phoneNumber">
-            <div class="error" *ngIf="userForm.get('phoneNumber')?.touched && userForm.get('phoneNumber')?.invalid">
-              <div *ngIf="userForm.get('phoneNumber')?.errors?.['required']">
-                This field is required.
-              </div>
-              <div *ngIf="userForm.get('phoneNumber')?.errors?.['minlength']">
-                Minimum length is 10 characters.
-              </div>
-              <div *ngIf="userForm.get('phoneNumber')?.errors?.['maxlength']">
-                Maximum length is 10 characters.
-              </div>
+        </div>
+        <div class="field col">
+          <label class="text-2xl" for="lastname2">Department Name<span class="red"> *</span></label>
+          <input id="lastname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="name">
+          <div class="error" *ngIf="userForm.get('name')?.touched && userForm.get('name')?.invalid">
+            <div *ngIf="userForm.get('name')?.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="userForm.get('name')?.errors?.['minlength']">
+              Minimum length is 2 characters.
             </div>
           </div>
-          </div>
+        </div>
+      </div>
 
-          <div class="formgrid grid">
-            <div class="field col">
-              <label class="text-2xl" for="lastname2">Mobile No.<span class="red"> *</span></label>
-              <input id="lastname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="mobileNumber">
-              <div class="error" *ngIf="userForm.get('mobileNumber')?.touched && userForm.get('mobileNumber')?.invalid">
-                <div *ngIf="userForm.get('mobileNumber')?.errors?.['required']">
-                  This field is required.
-                </div>
-                <div *ngIf="userForm.get('mobileNumber')?.errors?.['minlength']">
-                  Minimum length is 10 characters.
-                </div>
-                <div *ngIf="userForm.get('mobileNumber')?.errors?.['maxlength']">
-                  Maximum length is 10 characters.
-                </div>
-              </div>
+      <div class="formgrid grid">
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">Demand Code<span class="red"> *</span></label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="demandCode">
+          <div class="error" *ngIf="userForm.get('demandCode')?.touched && userForm.get('demandCode')?.invalid">
+            <div *ngIf="userForm.get('demandCode')?.errors?.['required']">
+              This field is required.
             </div>
-            <div class="field col">
-              <label class="text-2xl" for="firstname2">Email<span class="red"> *</span></label>
-              <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="email">
-              <div class="error" *ngIf="userForm.get('email')?.touched && userForm.get('email')?.invalid">
-                <div *ngIf="userForm.get('email')?.errors?.['required']">
-                  This field is required.
-                </div>
-                <div *ngIf="userForm.get('email')?.errors?.['email']">
-                  Invalid email address.
-                </div>
-              </div>
-            </div>
-            </div>
-  
-          <div class="button-container" *ngIf="isSubUp; else elseBlock">
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
-              </div>
+            <div *ngIf="userForm.get('demandCode')?.errors?.['minlength']">
+              Minimum length is 1 number.
             </div>
           </div>
-          <ng-template #elseBlock>
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update" icon="pi pi-check" iconPos="left" (click)="update(userForm)" ></p-button>
-              </div>
+        </div>
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">Address<span class="red"> *</span></label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="address">
+          <div class="error" *ngIf="userForm.get('address')?.touched && userForm.get('address')?.invalid">
+            <div *ngIf="userForm.get('address')?.errors?.['required']">
+              This field is required.
             </div>
-          </ng-template>
-      
+          </div>
+        </div>
+      </div>
+
+      <div class="formgrid grid">
+        <div class="field col">
+          <label class="text-2xl" for="lastname2">Pin Code<span class="red"> *</span></label>
+          <input id="lastname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="pinCode">
+          <div class="error" *ngIf="userForm.get('pinCode')?.touched && userForm.get('pinCode')?.invalid">
+            <div *ngIf="userForm.get('pinCode')?.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="userForm.get('pinCode')?.errors?.['minlength']">
+              Minimum length is 6 characters.
+            </div>
+            <div *ngIf="userForm.get('pinCode')?.errors?.['maxlength']">
+              Maximum length is 6 characters.
+            </div>
+          </div>
+        </div>
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">Phone No.<span class="red"> *</span></label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="phoneNumber">
+          <div class="error" *ngIf="userForm.get('phoneNumber')?.touched && userForm.get('phoneNumber')?.invalid">
+            <div *ngIf="userForm.get('phoneNumber')?.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="userForm.get('phoneNumber')?.errors?.['minlength']">
+              Minimum length is 10 characters.
+            </div>
+            <div *ngIf="userForm.get('phoneNumber')?.errors?.['maxlength']">
+              Maximum length is 10 characters.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="formgrid grid">
+        <div class="field col">
+          <label class="text-2xl" for="lastname2">Mobile No.<span class="red"> *</span></label>
+          <input id="lastname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="mobileNumber">
+          <div class="error" *ngIf="userForm.get('mobileNumber')?.touched && userForm.get('mobileNumber')?.invalid">
+            <div *ngIf="userForm.get('mobileNumber')?.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="userForm.get('mobileNumber')?.errors?.['minlength']">
+              Minimum length is 10 characters.
+            </div>
+            <div *ngIf="userForm.get('mobileNumber')?.errors?.['maxlength']">
+              Maximum length is 10 characters.
+            </div>
+          </div>
+        </div>
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">Email<span class="red"> *</span></label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="email">
+          <div class="error" *ngIf="userForm.get('email')?.touched && userForm.get('email')?.invalid">
+            <div *ngIf="userForm.get('email')?.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="userForm.get('email')?.errors?.['email']">
+              Invalid email address.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="button-container" *ngIf="isSubUp; else elseBlock">
+        <div class="formgrid grid">
+          <div class="col-9">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+          </div>
+          <div class="field col">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
+              icon="pi pi-check" iconPos="left" (click)="submit(userForm)"></p-button>
+          </div>
+        </div>
+      </div>
+      <ng-template #elseBlock>
+        <div class="formgrid grid">
+          <div class="col-9">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+          </div>
+          <div class="field col">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
+              icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
+          </div>
+        </div>
+      </ng-template>
+
     </p-dialog>
   </form>
   <p-toast></p-toast>
-  </div>
-  
-  <mh-prime-dynamic-table *ngIf="tableData!=null||tableData!=undefined"
-    size="small"
-    [numberRowsShown]="10"
-    [rowsPerPageOptions]="[10, 30, 50]"
-    [headers]="tableData.headers"
-    [data]="tableData.data"
-    rowSelectionMode="multiple"
-    [dataCount]="alldata"
-    [actionButtons]="actionButtonConfig"
-    (rowSelect)="handleRowSelection($event)"
-    (actionButtonClicked)="handleButtonClick($event)"
-    (queryParameterChange)="handQueryParameterChange($event)"
-  >
-  </mh-prime-dynamic-table>
+</div>
+
+<mh-prime-dynamic-table *ngIf="tableData!=null||tableData!=undefined" size="small" [numberRowsShown]="10"
+  [rowsPerPageOptions]="[10, 30, 50]" [headers]="tableData.headers" [data]="tableData.data" rowSelectionMode="multiple"
+  [dataCount]="alldata" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
+  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)">
+</mh-prime-dynamic-table>
