--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -2,8 +2,8 @@
   <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
   </div>
   <form [formGroup]="userForm">
-    <p-dialog class="custom-dialog" [contentStyle]="{'background-color':'rgb(222, 248, 247)'}" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
-      [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
+    <p-dialog class="custom-dialog" [contentStyle]="{'background-color':'rgb(222, 248, 247)'}" [header]="headertext"
+      [closable]="true" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
 
       <div class="mb-4 mt-3">
         <label class="text-2xl" for="firstname2">Select Treasury <span class="red"> *</span> : </label>
@@ -17,7 +17,7 @@
           Treasury Code is required.
         </div>
       </div>
-      <div class="formgrid grid"> 
+      <div class="formgrid grid">
         <div class="field col">
           <label class="text-2xl" for="firstname2">DDO Code<span class="red"> *</span> :</label>
           <input id="firstname2" type="text"
@@ -68,33 +68,33 @@
           </div>
           <div class="field col">
             <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
-              icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
+              icon="pi pi-check" iconPos="left" (click)="submit(userForm)"></p-button>
           </div>
         </div>
       </div>
       <ng-template #elseBlock1>
         <div class="button-container" *ngIf="(dialogButts == 2); else elseBlock2">
-        <div class="formgrid grid">
-          <div class="col-9">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
-          </div>
-          <div class="field col">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
-              icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
+          <div class="formgrid grid">
+            <div class="col-9">
+              <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+                icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+            </div>
+            <div class="field col">
+              <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
+                icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
+            </div>
           </div>
         </div>
-      </div>
       </ng-template>
       <ng-template #elseBlock2>
         <div class="button-container" *ngIf="(dialogButts == 3)">
-        <div class="formgrid grid">
-          <div class="col">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Close"
-              icon="pi pi-times" iconPos="left" (click)="hide(userForm)"></p-button>
+          <div class="formgrid grid">
+            <div class="col">
+              <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Close"
+                icon="pi pi-times" iconPos="left" (click)="hide(userForm)"></p-button>
+            </div>
           </div>
         </div>
-      </div>
       </ng-template>
 
     </p-dialog>
