--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -6,7 +6,7 @@
     <a class="layout-topbar-logo" routerLink="">
         <img src="assets/layout/images/{{ layoutService.config.colorScheme === 'light' ? 'logo_mini' : 'logo_dark_mini' }}.png" alt="logo" />
         
-        <span> | masterManagement</span>
+        <span> | Master Management</span>
     </a>
 
 
