--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -18,24 +18,24 @@
           <div class="formgrid grid">
             <div class="field col">
                 <label class="text-2xl" for="firstname2">Demand Code*</label>
-                <input id="firstname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="DemandCode">
-                <div *ngIf="userForm.get('DemandCode')?.invalid && userForm.get('DemandCode')?.touched" class="error">
-                  Demand Code is required <div class=""></div>
+                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="demandCode">
+                <div *ngIf="userForm.get('demandCode')?.invalid && userForm.get('demandCode')?.touched" class="error">
+                  Demand Code is required length 2 <div class=""></div>
                 </div>
             </div>
             <div class="field col">
-                <label class="text-2xl" for="firstname2">Code*</label>
-                <input id="firstname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
-                <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
-                  Code is required.
+                <label class="text-2xl" for="firstname2">SchemeHead Code*</label>
+                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="code">
+                <div *ngIf="userForm.get('code')?.invalid && userForm.get('code')?.touched" class="error">
+                  Code is required length 3.
                 </div>
               </div>
           </div>
           <div class="formgrid grid">
           <div class="field col">
-            <label class="text-2xl" for="firstname2">Name*</label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Name">
-            <div *ngIf="userForm.get('Name')?.invalid && userForm.get('Name')?.touched" class="error">
+            <label class="text-2xl" for="firstname2">SchemeHead Name*</label>
+            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="name">
+            <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
               Designation Mstld is required.
             </div>
           </div>
@@ -43,8 +43,8 @@
           <div class="formgrid grid">
           <div class="field col">
             <label class="text-2xl" for="lastname2">Minor Head Id*</label>
-            <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="MinorHeadId">
-            <div *ngIf="userForm.get('MinorHeadId')?.invalid && userForm.get('MinorHeadId')?.touched" class="error">
+            <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="minorHeadId">
+            <div *ngIf="userForm.get('minorHeadId')?.invalid && userForm.get('minorHeadId')?.touched" class="error">
               Minor Head ID is required.
             </div>
           </div>
