--- a/src/app/demo/components/masterForms/master-minorhead-forms/master-minorhead-forms.component.html
+++ b/src/app/demo/components/masterForms/master-minorhead-forms/master-minorhead-forms.component.html
@@ -1,12 +1,11 @@
 <div class="custom-dialog">
     <div class="flex flex-wrap align-items-center justify-content-end">
-        <!-- <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
-    </div> -->
+
         <form [formGroup]="userForm">
-            <div class="mb-4 mt-3">
+            <!-- <div class="mb-4 mt-3">
                 <label class="text-2xl" for="firstname2">Select SubMajorHead <span class="red"> *</span> : </label>
-                <p-dropdown class="ml-3" [style]="{'width':'71%'}" [options]="codes" formControlName="Submajorcode"
-                    placeholder="Select Treasury" optionLabel="name" optionValue="code" (onChange)="getTcode()">
+                <p-dropdown class="ml-3" [style]="{'width':'67%'}" [options]="codes" formControlName="SubMajorHeadCode"
+                    placeholder="Select SubMajorHead" optionLabel="name" optionValue="code" (onChange)="getTcode()">
                     <ng-template let-option pTemplate="item">
                         {{ option.code }} : {{ option.name }}
                     </ng-template>
@@ -15,30 +14,44 @@
                     class="error">
                     Treasury Code is required.
                 </div>
-            </div>
-            <div class="formgrid grid">
-                <div class="field col">
-                    <label class="text-2xl" for="firstname2">Code<span class="red"> *</span> :</label>
-                    <input id="firstname2" type="text" [value]="getTCode"
-                        class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-                        formControlName="Code">
-                    <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
-                        Code is required.
-                    </div>
+            </div>        -->
+            <div class="mb-4 mt-3">
+                <label class="text-2xl" for="firstname2">Select SubMajorHead <span class="red"> *</span> : </label>
+                <p-dropdown class="ml-3" [style]="{'width':'60%'}" [options]="codes" formControlName="SubMajorHeadCode"
+                    placeholder="Select Treasury" optionLabel="name" optionValue="id">
+                    <ng-template let-option pTemplate="item">
+                        {{ option.code }} : {{ option.name }}
+                    </ng-template>
+                </p-dropdown>
+                <div *ngIf="userForm.get('DetailHeadId')?.invalid && userForm.get('DetailHeadId')?.touched"
+                    class="error">
+                    Detail Head Code is required.
                 </div>
+            </div>
+           <div class="formgrid grid">
                 <div class="field col">
-                    <label class="text-2xl" for="firstname2">Name<span class="red"> *</span> :</label>
+                    <label class="text-2xl" for="firstname2">Minor Code<span class="red"> *</span> :</label>
                     <input id="firstname2" type="text"
                         class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-                        formControlName="Phone">
-                    <div *ngIf="userForm.get('Phone')?.invalid && userForm.get('Phone')?.touched" class="error">
-                        Phone is required.
+                        formControlName="MinorCode">
+                    <div *ngIf="userForm.get('Designation')?.invalid && userForm.get('Designation')?.touched"
+                        class="error">
+                        Designation is required.
                     </div>
                 </div>
+           
+
+           
+                <div class="field col">
+                    <label class="text-2xl" for="firstname2">Minor Name<span class="red"> *</span> :</label>
+                    <input id="firstname2" type="text"
+                        class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+                        formControlName="MinorName">
+                        <div *ngIf="userForm.get('MinorName')?.invalid && userForm.get('MinorName')?.touched" class="error">
+                            Sub Detail Head name is required.
+                        </div>
+                </div>
             </div>
-
-          
-
 
             <div class="button-container" *ngIf="(dialogButts == 1); else elseBlock1">
                 <div class="formgrid grid">
@@ -82,6 +95,6 @@
               </ng-template>
 
         </form>
-        <!-- <p-toast></p-toast> -->
+
     </div>
 </div>
