--- a/src/app/demo/components/treasury/treasury.component.scss
+++ b/src/app/demo/components/treasury/treasury.component.scss
@@ -5,3 +5,6 @@
 .red{
     color: red;
 }
+// .custom-dialog {
+//     background-color: rgba(253, 208, 7, 0.5); /* Transparent blue background */
+//   }
